Creative Builders Africa ltd
FIxed page linking issue: Fundi.html

--- a/pages/Fundi.html
+++ b/pages/Fundi.html
@@ -64,7 +64,8 @@
       <h2>Ask for a <span>Fundi</span></h2>
       <p>Fill in the details below and we'll get back to you shortly.</p>
 
-      <form id="serviceForm">
+      <form action="https://api.web3forms.com/submit" method="post" id="serviceForm">
+        <input type="hidden" name="access_key" value="21ac7eac-ee01-44ab-97a5-5722919600b8">
         <label>Full Name</label>
         <input
           type="text"
