Creative Builders Africa ltd
Added google fonts and AOS functions

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="color-scheme" content="light">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Primary Meta Tags -->
 <title>Creative Builders Africa Ltd | Architecture, Construction, 3D Rendering & VR Solutions in Nairobi</title>
 <link rel="icon" type="image/png" href="./images/favicon/favicon.png">
@@ -113,12 +117,12 @@
             <div class="about_content">
                 <p class="top">About Us</p>
                 <br>
-                <h1>From Blueprint to <span id="underline">Reality</span></h1><br>
-                <p >Creative Builders Africa Ltd is a multidisciplinary firm in Kenya specializing in Architecture, Construction, interior Design, Graphic design and renovations.
+                <h1 data-aos="fade-up" data-aos-duration="2000">From Blueprint to <span id="underline" data-aos="fade-left" data-aos-duration="2000">Reality</span></h1><br>
+                <p data-aos="fade-up" data-aos-duration="2000">Creative Builders Africa Ltd is a multidisciplinary firm in Kenya specializing in Architecture, Construction, interior Design, Graphic design and renovations.
                 <br>
                 We are committed to transforming spaces through innovative, sustainable and cost-effective solutions tailored to our Clients' needs.
                 <br>
-                By integrating green building practices and modern technologies, we deliver affordable yet high quality designs and construction services that enhance functionality, aesthetics and environmental responsibility.</p>
+                <p data-aos="fade-up" data-aos-duration="2000">By integrating green building practices and modern technologies, we deliver affordable yet high quality designs and construction services that enhance functionality, aesthetics and environmental responsibility.</p></p>
                 <br>
                 <br>
                 <a href="./pages/about.html" rel="noreferrer noopener" >Read More</a>
