--- a/pages/Fundi.html
+++ b/pages/Fundi.html
@@ -4,6 +4,10 @@
     <meta name="color-scheme" content="light">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Creative Builders Africa</title>
     <link rel="stylesheet" href="Fundi.css" />
   </head>
