--- a/pages/Quote.html
+++ b/pages/Quote.html
@@ -4,7 +4,11 @@
     <meta name="color-scheme" content="light">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Creative Buildesr Africa | Get a quick Quote</title>
     <link rel="stylesheet" href="Quote.css">
 </head>
 <body>
@@ -71,7 +75,7 @@
     <input type="email" name="email" required placeholder="Enter your email" />
 
     <label>Phone Number</label>
-    <input type="tel" name="phone" required placeholder="+254 712 345 678" />
+    <input type="tel" name="phone" required placeholder="+254 712 XXX XXX" />
 
     <label>Project Type</label>
     <select name="projectType" required>
