--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,10 @@
     <meta name="color-scheme" content="light">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Creative Builders Africa</title>
     <link rel="stylesheet" href="about.css">
 </head>
@@ -67,8 +71,8 @@
         <section>
             <div class="midsec">
                 <a href="./assets/company-profile.pdf" download>Company Profile</a>
-                <a href="https://forms.gle/TidR2JVRaxYHT66R8">Start a Project</a>
-                <a href="#">Ask For a Fundi</a>
+                <a href="./Quote.html" rel="noopener noreferrer" target="_blank">Start a Project</a>
+                <a href="./Fundi.html" rel="noopener noreferrer" target="_blank">Ask For a Fundi</a>
             </div>
         </section>
         <section>
