Creative Builders Africa ltd.
Complete MVP

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Primary Meta Tags -->
 <title>Creative Builders Africa Ltd | Architecture, Construction, 3D Rendering & VR Solutions in Nairobi</title>
 <link rel="icon" type="image/png" href="./images/favicon/favicon.png">
+
 <meta name="description" content="Creative Builders Africa Ltd is a leading architectural and construction firm in Nairobi, Kenya. We provide architecture design, building construction, excavation, project management, interior design, 3D rendering, animation, virtual reality experiences, and web development services. Website created and designed by Leakey Hans.">
 
 <!-- Keywords -->
@@ -77,6 +78,7 @@
         </header>
 
     <!-- Hero Section -->
+    <div>
     <section class="hero" id="home">
         <div class="slideshow-container">
             <div class="slide active">
@@ -99,7 +101,7 @@
         <div class="hero-content">
             <h1>Elevating Ideas into Architecture</h1>
             <p>Guiding you through every stage of design and construction</p>
-            <button class="cta-button" onclick="alert('CTA Button Clicked!')"><a href="#">View Our Portfolio</a></button>
+            <button class="cta-button"><a href="./assets/Creative Builders Africa ltd .pdf" target="_blank" rel="noopener noreferrer">View Our Portfolio</a></button>
         </div>
 
         <div class="slide-indicators">
@@ -110,6 +112,7 @@
             <div class="indicator" onclick="goToSlide(4)"></div>
         </div>
     </section>
+    <div></div>
 
         <!--About Content-->
     <section>
@@ -332,17 +335,17 @@
             </div>
         </div>
         <div class="more_container">
-           <div id="cardlink"><a href="#">View More Projects</a></div><!--About page here-->
+           <div id="cardlink"><a href="./assets/Creative Builders Africa ltd .pdf" rel="noopener noreferrer">View More Projects</a></div><!--About page here-->
         </div>
     </section>
     <!--Services-->
     <section>
         <div style="width: 100%; height: 100px; text-align: center; padding-top: 50px; margin-bottom: 50px;">
-            <h3 style="font-weight: 400; font-size: 35px;">Our Services</h3>
+            <h3 style="font-weight: 400; font-size: 35px;">Our <span id="underline">Services</span></h3>
         </div>
         <!--Tile 1-->
         <div class="services_section">
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/Architecture.svg" alt="Architecture illustration">
                 </div>
@@ -350,7 +353,7 @@
                 <p>We design spaces that inspire - blending creativity, function,and sustainability to shape structures that reflect your vision and purpose.</p>
             </div>
             <!--Tile 2-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/Construction.svg" alt="construction illustration">
                 </div>
@@ -358,7 +361,7 @@
                 <p>We deliver quality construction with trusted expertise, ensuring durability, safety, and timely completion.</p>
             </div>
             <!--Tile 3-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/Excavation.svg" alt="Excavation illustration">
                 </div>
@@ -366,7 +369,7 @@
                 <p>We prepare your site with precision and care - from ground clearing to foundation work, ensuring a solid base for lasting construction.</p>
             </div>
             <!--Tile 4-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/ProjectManagement.svg" alt="Excavation illustration">
                 </div>
@@ -374,7 +377,7 @@
                 <p>From concept to completion,we oversee very phase, ensuring efficiency, cost control, accountability, clear communication and successful project outcomes.</p>
             </div>
             <!--Tile 5-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/Rendering.svg" alt="Rendering Icon">
                 </div>
@@ -382,7 +385,7 @@
                 <p>See your ideas come to life. Our realistic 3D renders and fly through animations help you present, envision and market your designs with confidence</p>
             </div>
             <!--Tile 6-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/Interior design.svg" alt="Interior Design Icon">
                 </div>
@@ -390,7 +393,7 @@
                 <p>We create inspiring interior spaces that reflect our clients personality while optimizing comfort, flow and modern design</p>
             </div>
             <!--Tile 7-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/VirtualReality.svg" alt="Virtual Reality Icon">
                 </div>
@@ -398,7 +401,7 @@
                 <p>Experience your projects before they're built with immersive 3D visualizations and interactive Virtual walkthroughs.</p>
             </div>
             <!--Tile 8-->
-            <div class="services_container">
+            <div class="services_container" data-aos="fade-up" data-aos-duration="2500">
                 <div class="service_icon">
                     <img src="./svg-icons/Webdev.svg" alt="Excavation illustration">
                 </div>
@@ -407,7 +410,7 @@
             </div>
         </div>
         <div class="btncontainer">
-            <button class="btn2"><a href="#">Book a Consultation</a></button>
+            <button class="btn2"><a href="https://wa.me/254702066062">Book a Consultation</a></button>
         </div>
     </section>
     <!--Clients and Patners Section-->
