--- a/pages/Quote.html
+++ b/pages/Quote.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Creative Buildesr Africa | Get a quick Quote</title>
+    <title>Creative Builders Africa | Get a quick Quote</title>
     <link rel="stylesheet" href="Quote.css">
+    <link rel="icon" type="image/png" href="../images/favicon/favicon.png">
 </head>
 <body>
     <header>
