--- a/pages/Fundi.html
+++ b/pages/Fundi.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>Creative Builders Africa</title>
     <link rel="stylesheet" href="Fundi.css" />
+    <link rel="icon" type="image/png" href="../images/favicon/favicon.png">
   </head>
   <body>
     <header>
@@ -48,7 +49,7 @@
             </li>
             <li id="nav_cta">
               <a
-                href="https://docs.google.com/forms/d/e/1FAIpQLSeeZUDoLfwfK-_DFiqmoKOsfmC5urcRTuutRkKA-BElsIbDfg/viewform?usp=header"
+                href="./Quote.html"
                 target="_blank"
                 rel="noopener noreferrer"
                 >Get a Quick Quote</a
