--- a/pages/Fundi.html
+++ b/pages/Fundi.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kedebideri:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Creative Builders Africa</title>
+    <title>Creative Builders Africa | Ask for a Fundi</title>
     <link rel="stylesheet" href="Fundi.css" />
     <link rel="icon" type="image/png" href="../images/favicon/favicon.png">
   </head>
@@ -69,8 +69,8 @@
       <h2>Ask for a <span>Fundi</span></h2>
       <p>Fill in the details below and we'll get back to you shortly.</p>
 
-      <form action="https://api.web3forms.com/submit" method="post" id="serviceForm">
-        <input type="hidden" name="access_key" value="21ac7eac-ee01-44ab-97a5-5722919600b8">
+      <form action="https://api.web3forms.com/submit" method="POST" id="serviceForm">
+        <input type="hidden" name="access_key" value="f447234a-a62e-44d0-8d85-190ffd56bf8e">
         <label>Full Name</label>
         <input
           type="text"
